force-app/main/default/objects/Knowledge_Review__c.object
<CustomObject>
    <fields>
        <fullName>Knowledge_Article__c</fullName>
        <description>Linked Knowledge Article</description>
        <label>Knowledge Article</label>
        <referenceTo>Knowledge__kav</referenceTo>
        <relationshipLabel>Knowledge Reviews</relationshipLabel>
        <relationshipName>Knowledge_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Master_Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Article</label>
        <referenceTo>Knowledge__kav</referenceTo>
        <relationshipLabel>Knowledge Reviews (Master Article)</relationshipLabel>
        <relationshipName>Child_Knowledge_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_ID__c</fullName>
        <formula>Knowledge_Article__r.Original_Version_ID__c</formula>
        <label>Master ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_New_review__c</fullName>
        <description>Created for 01869489</description>
        <formula>IF(
AND(New_Review_Created__c = FALSE,
Today()=(ReviewedCompletedDate__c + 183)),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needs New review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Review_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created 01869489</description>
        <label>New Review Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_Status__c</fullName>
        <description>Created for 01869489</description>
        <formula>TEXT(Knowledge_Article__r.PublishStatus)</formula>
        <label>Publish Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewedCompletedDate__c</fullName>
        <description>Marks if a review has been completed in the last 6 months. 

Created for 01869489</description>
        <label>Reviewed Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the review</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Review</fullName>
                    <default>true</default>
                    <label>Pending Review</label>
                </value>
                <value>
                    <fullName>Review Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_of_Changes__c</fullName>
        <description>Summary of Changes Made to Article</description>
        <label>Summary of Changes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Knowledge Review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Knowledge_Article__c</columns>
        <columns>Publish_Status__c</columns>
        <columns>Master_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Needs_New_review__c</columns>
        <columns>New_Review_Created__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ReviewedCompletedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KR-{0000}</displayFormat>
        <label>Knowledge Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>